// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateNew page tests CreateNew page draws correctly 1`] = `
<div>
  <div
    className="Content-main"
  >
    <h1
      className="Content-title"
    >
      Create new recipe
    </h1>
    <p>
      Instructions Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur placeat quasi dolor illum? Assumenda magni architecto velit aspernatur consequuntur cupiditate fugit vero tenetur rem perspiciatis exercitationem harum, ratione quas corrupti.
    </p>
    <div
      className="User-input"
    >
      <input
        placeholder="Enter recipe title"
        type="text"
        value=""
      />
    </div>
    <div
      className="User-input"
    >
      <textarea
        cols={50}
        placeholder="Enter description of recipe"
        rows={12}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DisplayOne page tests DisplayOne page draws correctly (snapshot) including data from test recipe 1 1`] = `
<div>
  <div
    class="Content-main"
  >
    <h1
      class="Recipe-title"
    >
      One-Pot Mac and Cheese
    </h1>
    <h5
      class="Recipe-tags"
    >
      Tags: 
      Dinner
    </h5>
    <h6
      class="Recipe-new"
    >
      This is a new recipe!
    </h6>
    <h6
      class="Recipe-popular"
    >
      This item is popular
    </h6>
    <svg
      class="Icon-print"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Print the shopping list
      </title>
      <path
        d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z"
      />
      <path
        d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z"
      />
    </svg>
    <p
      class="Recipe-description>"
    >
      Who likes cleaning up after making mac and cheese? 
              Not this girl. This one-pot mac and cheese is a family favorite, 
              and my 3-year-old is thrilled to see it coming to the dinner table. 
              We love to add sliced smoked sausage to this creamy mac recipe!
    </p>
    <div>
      <div>
        <label>
          Number of portions: 
        </label>
        <select
          name="portions"
          title="Number of portions"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
          <option
            selected=""
            value="4"
          >
            4
          </option>
          <option
            value="5"
          >
            5
          </option>
          <option
            value="6"
          >
            6
          </option>
          <option
            value="7"
          >
            7
          </option>
          <option
            value="8"
          >
            8
          </option>
          <option
            value="9"
          >
            9
          </option>
          <option
            value="10"
          >
            10
          </option>
        </select>
      </div>
      <table
        class="Ingredients-main"
      >
        <tbody>
          <tr>
            <th
              class="Ingredients-header"
            >
              Ingredients:
            </th>
            <th />
          </tr>
          <tr
            class="Ingredients-row"
          >
            <td
              class="Ingredients-cell"
            >
              1.5
               
              cup
            </td>
            <td
              class="Ingredients-name"
            >
              whole milk
            </td>
          </tr>
          <tr
            class="Ingredients-row"
          >
            <td
              class="Ingredients-cell"
            >
              3
               
              cup
            </td>
            <td
              class="Ingredients-name"
            >
              water
            </td>
          </tr>
          <tr
            class="Ingredients-row"
          >
            <td
              class="Ingredients-cell"
            >
              1
               
              package
            </td>
            <td
              class="Ingredients-name"
            >
              elbow macaroni (16 ounces)
            </td>
          </tr>
          <tr
            class="Ingredients-row"
          >
            <td
              class="Ingredients-cell"
            >
              4
               
              ounce
            </td>
            <td
              class="Ingredients-name"
            >
              velveeta, cubed
            </td>
          </tr>
          <tr
            class="Ingredients-row"
          >
            <td
              class="Ingredients-cell"
            >
              2
               
              cup
            </td>
            <td
              class="Ingredients-name"
            >
              shredded sharp cheddar cheese
            </td>
          </tr>
          <tr
            class="Ingredients-row"
          >
            <td
              class="Ingredients-cell"
            >
              0.5
               
              teaspoon
            </td>
            <td
              class="Ingredients-name"
            >
              salt
            </td>
          </tr>
          <tr
            class="Ingredients-row"
          >
            <td
              class="Ingredients-cell"
            >
              0.5
               
              teaspoon
            </td>
            <td
              class="Ingredients-name"
            >
              coarsely ground pepper
            </td>
          </tr>
        </tbody>
      </table>
      <button
        class="Button-navigation"
        title="Like the recipe"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a9.84 9.84 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733.058.119.103.242.138.363.077.27.113.567.113.856 0 .289-.036.586-.113.856-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.163 3.163 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.82 4.82 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z"
          />
        </svg>
      </button>
      <a
        href="/edit/undefined"
      >
        <button
          class="Button-navigation"
          title="Edit recipe"
        >
          Edit recipe
        </button>
      </a>
      <a
        href="/cart"
      >
        <button
          class="Button-navigation"
          title="Add recipe to shopping list"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M4 6.414L.757 3.172l1.415-1.415L5.414 5h15.242a1 1 0 0 1 .958 1.287l-2.4 8a1 1 0 0 1-.958.713H6v2h11v2H5a1 1 0 0 1-1-1V6.414zM6 7v6h11.512l1.8-6H6zm-.5 16a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm12 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
              />
            </g>
          </svg>
           
        </button>
      </a>
    </div>
    <div>
      <a
        href="/"
      >
        <button
          class="Button-navigation"
          title="Back"
        >
          Back
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`EditRecipes page tests EditRecipes page draws correctly 1`] = `
<div>
  <h1>
    Site to edit the recipes
  </h1>
</div>
`;

exports[`Explore page tests Explore page draws correctly 1`] = `
<div
  className="Content-main"
>
  <h1>
    A place to discover new recipes, API or other
  </h1>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, perferendis illo nam consectetur adipisci quas quaerat omnis dolore repellendus deserunt, at placeat, laudantium quod? Facilis, nam soluta voluptates modi odio, nostrum deleniti cupiditate molestias debitis iste, error laboriosam? Officia fugit quos officiis voluptatem iure laboriosam perferendis libero sit sapiente impedit.
  </p>
</div>
`;

exports[`Home page tests Home page draws correctly (snapshot) including list of buttons 1`] = `
<div>
  <div
    class="Content-main"
  >
    <h1>
      Welcome to the Tasty
    </h1>
    <p>
      Here you can explore your own recipes by adding new content, editing existing ones and deleting the ones you don't care about anymore.
    </p>
    <p>
      This is also the place to discover more and get inspiration from, we have selected a few to show you from [External API] below.
    </p>
    <div
      class="Content-second"
    >
      <div>
         
        <a
          href="/recipe/1"
        >
          <button
            class="Button-recipe-navigation"
          >
            One-Pot Mac and Cheese
          </button>
        </a>
        <a
          href="/recipe/2"
        >
          <button
            class="Button-recipe-navigation"
          >
            Easy Marinated Grilled Flank Steak
          </button>
        </a>
      </div>
      <div
        class="Content-second"
      />
    </div>
  </div>
</div>
`;

exports[`ShoppingCart page tests ShoppingCart page draws correctly 1`] = `
<div>
  <div
    class="Content-main"
  >
    <h1>
      Shopping list
    </h1>
    <svg
      class="Icon-print"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Print the shopping list
      </title>
      <path
        d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z"
      />
      <path
        d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z"
      />
    </svg>
    <table
      class="Ingredients-main"
    >
      <tbody>
        <tr>
          <td>
            <svg
              class="Icon-increase"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Increase amount
              </title>
              <path
                d="M363 277h-86v86h-42v-86h-86v-42h86v-86h42v86h86v42z"
              />
              <path
                d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422c-44.3 0-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256c0-44.3 17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
              />
            </svg>
          </td>
          <td
            class="Ingredients-cell"
          >
            1.5
          </td>
          <td>
            <svg
              class="Icon-decrease"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Decrease amount
              </title>
              <path
                d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422s-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256s17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
              />
              <path
                d="M363 277H149v-42h214v42z"
              />
            </svg>
          </td>
          <td
            class="Shopping-unit"
          >
            cup
          </td>
          <td
            class="Ingredients-name"
          >
            whole milk
          </td>
          <td>
            <svg
              class="Icon-remove"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                dataName="Square Remove"
                id="Square_Remove"
              >
                <g>
                  <path
                    d="M18.437,20.937H5.563a2.5,2.5,0,0,1-2.5-2.5V5.563a2.5,2.5,0,0,1,2.5-2.5H18.437a2.5,2.5,0,0,1,2.5,2.5V18.437A2.5,2.5,0,0,1,18.437,20.937ZM5.563,4.063a1.5,1.5,0,0,0-1.5,1.5V18.437a1.5,1.5,0,0,0,1.5,1.5H18.437a1.5,1.5,0,0,0,1.5-1.5V5.563a1.5,1.5,0,0,0-1.5-1.5Z"
                  />
                  <path
                    d="M13.767,14.477a.5.5,0,0,0,.71-.71L12.707,12l1.77-1.77a.5.5,0,0,0-.71-.7L12,11.3l-1.77-1.77a.5.5,0,0,0-.7.7c.59.59,1.17,1.18,1.77,1.77l-1.77,1.77c-.46.45.25,1.16.7.71L12,12.707Z"
                  />
                </g>
              </g>
            </svg>
          </td>
        </tr>
        <tr>
          <td>
            <svg
              class="Icon-increase"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Increase amount
              </title>
              <path
                d="M363 277h-86v86h-42v-86h-86v-42h86v-86h42v86h86v42z"
              />
              <path
                d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422c-44.3 0-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256c0-44.3 17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
              />
            </svg>
          </td>
          <td
            class="Ingredients-cell"
          >
            3
          </td>
          <td>
            <svg
              class="Icon-decrease"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Decrease amount
              </title>
              <path
                d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422s-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256s17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
              />
              <path
                d="M363 277H149v-42h214v42z"
              />
            </svg>
          </td>
          <td
            class="Shopping-unit"
          >
            cup
          </td>
          <td
            class="Ingredients-name"
          >
            water
          </td>
          <td>
            <svg
              class="Icon-remove"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                dataName="Square Remove"
                id="Square_Remove"
              >
                <g>
                  <path
                    d="M18.437,20.937H5.563a2.5,2.5,0,0,1-2.5-2.5V5.563a2.5,2.5,0,0,1,2.5-2.5H18.437a2.5,2.5,0,0,1,2.5,2.5V18.437A2.5,2.5,0,0,1,18.437,20.937ZM5.563,4.063a1.5,1.5,0,0,0-1.5,1.5V18.437a1.5,1.5,0,0,0,1.5,1.5H18.437a1.5,1.5,0,0,0,1.5-1.5V5.563a1.5,1.5,0,0,0-1.5-1.5Z"
                  />
                  <path
                    d="M13.767,14.477a.5.5,0,0,0,.71-.71L12.707,12l1.77-1.77a.5.5,0,0,0-.71-.7L12,11.3l-1.77-1.77a.5.5,0,0,0-.7.7c.59.59,1.17,1.18,1.77,1.77l-1.77,1.77c-.46.45.25,1.16.7.71L12,12.707Z"
                  />
                </g>
              </g>
            </svg>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="Extra-information"
    >
      Total number of items: 2
    </div>
    <div>
      <a
        href="/"
      >
        <button
          class="Button-navigation"
        >
          Back
        </button>
      </a>
      <button
        class="Button-navigation"
        title="Clear shopping list"
      >
        Clear list
      </button>
    </div>
  </div>
</div>
`;
